[metadata]
name = grwave
version = 0.1.1
author = Michael Hirsch, Ph.D.
description = Groundwave per ITU P.368 10 kHz - 30 MHz
url = https://github.com/scivision/grwave
keywords =
  groundwave
  longwave radio
  HF radio
  LF radio
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas

[options.extras_require]
tests =
  pytest>=3.5
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib

[options.entry_points]
console_scripts =
  GRwave = GRwave:main


[tool:pytest]
minversion = 3.5

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
