[metadata]
name = grwave
version = 0.1.1
author = Michael Hirsch, Ph.D.
description = Groundwave per ITU P.368 10 kHz - 30 MHz
url = https://github.com/scivision/grwave
keywords =
  groundwave
  longwave radio
  HF radio
  LF radio
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas

[options.extras_require]
tests =
  pytest>=3.5
  flake8
  mypy
plot =
  matplotlib

[tool:pytest]
minversion = 3.5

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
