[metadata]
name = grwave
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Groundwave per ITU P.368 10 kHz - 30 MHz
url = https://github.com/space-physics/grwave
keywords =
  groundwave
  longwave radio
  HF radio
  LF radio
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  numpy
  pandas

[options.extras_require]
tests =
  pytest >= 3.5
  flake8
  mypy
plot =
  matplotlib
